<resources>
    <string name="app_name">Suboficiales</string>
    <string name="proyecto">Proyecto</string>
    <string name="titulo">DESARROLLO DE UN SISTEMA BÁSICO DE INFOCOMUNICACION Y VISUALIZACIÓN DE DATOS A TRAVÉS DE DISPOSITIVOS MÓVILES CON TECNOLOGÍA ANDROID</string>
    <string name="escuela">ESCUELA NAVAL DE SUBOFICIALES ARC \"BARRANQUILLA\"</string>
    <string name="tecnologiaelectronica">TECNOLOGÍA EN ELECTRÓNICA</string>
    <string name="ciudadfecha">BARRANQUILLA, MAYO 2018</string>
    <string name="contenido">Contenido</string>
    <string name="title_activity_agradecimientos">Agradecimientos</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_introduccion">Introduccion</string>
    <string name="title_activity_planteamiento_problema">PlanteamientoProblema</string>
    <string name="title_activity_justificacion">Justificacion</string>
    <string name="title_activity_objetivos">Objetivos</string>
    <string name="title_activity_inicio">Inicio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduccion">Introducción</string>
    <string name="planteamiento">Planteamiento</string>
    <string name="justificacion">Justificación</string>
    <string name="datostiemporeal">Datos en tiempo real</string>
    <string name="planteamientodelproblema">A diferencia de los sistemas de adquisición de datos SCADAT en los cuales el usuario interactúa con la información suministrada, un sistema de  infocomunicación, nos informa y comunica por medio de cualquier tecnología TICs, conocer acerca de las condiciones medioambientales por ejemplo, lo que nos suministra un sistema de medición de condiciones relacionadas con el medio ambiente. La apropiada visualización de esta información, nos permite en un entorno militar,  conocer de diferentes parámetros o condiciones relacionadas con el devenir militar; permitiendo que se tomen decisiones no solo acordes con las circunstancias relacionadas con ellas; sino aquellas relacionadas con la defensa y seguridad, permitiendo poder hacer labores de monitoreo, seguimiento, vigilancia y control, con fines preventivos o para fines investigativos. Encontramos que no existen muchos medios remotos, de fácil adquisición para obtener estos datos, pues la tecnología de los equipos actuales, es muy costosa o no está al alcance de todo el mundo</string>
    <string name="justificacionfull">Se pretende desarrollar un sistema de transferencia de datos, que de manera remota nos transmita desde el dispositivo, a una aplicación móvil de plataforma android, toda la información recopilada, empleando un módulo Xbee Pro 900Hp SB3, El cual se aprovecha del protocolo de red DigiMesh®, que ofrece un funcionamiento denso de red y soporte para enrutadores durmientes, que también está disponible en una configuración de punto a multipunto patentada. Consta de una potencia de 250 mW, una banda de 902 MHz a 928 MHz, por lo cual puede alcanzar hasta 14.4Km (con antena dipolo 2.1dB), máscara de canal seleccionable para inmunidad de software y además de su calificación industrial de temperatura (-40ºC a 85ºC).   Se pretende comunicar por medio de un arduino y un receptor principal que cargará los datos recopilados en la nube. Al mismo tiempo, el teléfono que contenga la aplicación será capaz de acceder a los datos registrados en tiempo real, únicamente contando con una conexión a internet, desde cualquier punto de ubicación geográfico. Todo esto con fines de investigación, información  y prevención de eventos catastróficos.</string>
    <string name="titulovariables">CONEXIÓN EN TIEMPO REAL VÍA WEB-XBEE</string>
    <string name="refrescar">Refrescar</string>
    <string name="variableuno">Variable 1</string>
    <string name="variable2">Variable 2</string>
    <string name="variable3">Variable 3</string>
    <string name="guardar">Guardar</string>
    <string name="inicio">Inicio</string>
    <string name="ciudadfecha2">BARRANQUILLA, MAYO 2018</string>
    <string name="agradecimientos">Agradecimientos</string>
    <string name="bibliografia">Bibliografia</string>
    <string name="objetivos">Objetivos</string>
    <string name="introduccionfull">Los métodos comunicativos tales como los teléfonos celulares, la radio e Internet usan tecnología avanzada en sistemas de transmisión inalámbrica de datos, que llevan ondas electromagnéticas invisibles para transmitir datos desde grandes distancias en poco tiempo. Existen varios sistemas de transmisión inalámbrica de datos que permiten que las señales de datos sean enviadas y recibidas por otras unidades rápidamente. En la actualidad manejamos muchas clases de datos e informaciones, en cualquiera de los ámbitos que se nos puedan ocurrir, ya sean cotidianos o poco comunes. Por ejemplo, cosas tan comunes como lo son el estado del clima, el tiempo, las estadísticas económicas, los valores de algunos objetos o alimentos, o más bien información sobre lo que ocurre en todo el mundo etc. Generalizando todas las clases de datos e información que a diario recibimos, es muy importante tener en cuenta que se debe tener un manejo adecuado de todo esto. Se deben aprovechar todos los medios que se tengan para sacar un máximo provecho a la información, sin importar el lugar del cual provenga. Podemos contar con la transferencia de información por muchas vías, televisión, radio, internet y entre otras. También teniendo en cuenta que no toda la información es del mismo tipo, por ende cada una debe tener un manejo específico, es decir, no puedo darle el mismo manejo a una información pública que a una información privada, ya que esta puede contener datos, confidenciales,  personales o cosas por el estilo.   Es importante contar con sistemas de seguridad que me garanticen que mi información va a ser transmitida de una manera segura, desde el emisor, hasta el receptor, sin importar el medio ni las interferencias que se encuentren durante el recorrido, por ende la importancia de desarrollar métodos en los que podamos transmitir o compartir información de un punto a otro teniendo en cuenta factores como los medios, la velocidad y la seguridad.  Los módulos de transferencia de datos Xbee por vía RF, fueron los seleccionados para realizar nuestro proyecto, debido a su accesibilidad, capacidad, resistencia, alcance, portabilidad y bajo consumo de energía, ya que nos permite tener una cobertura de largo alcance, adicional de una buena velocidad de transferencia de datos manejando conexiones de hasta 250Kbps a distancias de alrededor de 28 millas contando con antenas de alta ganancia.  Además teniendo en cuenta que pueden ser usados en conexión punto-punto y punto-multipunto conformando una conexión en malla que nos permite también una mejor cobertura.</string>
    <string name="objetivosfull">OBJETIVO GENERAL  •\tDiseñar y construir  un sistema de infocomunicación, adquisición y monitoreo de datos, desde un dispositivo remoto a una aplicación móvil. 3.2 OBJETIVOS ESPECIFICOS  •\tConsultar antecedentes o información relevante para el diseño e implementación de una aplicación móvil.  •\tDiseñar una aplicación móvil para la trasmisión de datos entre un dispositivo y el cliente  •\tImplementar una aplicación móvil para la transmisión de datos entre un dispositivo y el cliente.</string>
    <string name="bibliografiafull">•\tOjeda, L. (2009). MÓDULOS DE TRANSMISIÓN INALÁMBRICA. Recuperado de http://www.xbee.cl  •\tTECHNOHALL. (2012). REDES INALÁMBRICAS. Recuperado de http://technohall.com/2012/05/tips-para-implementar-redes-inalambricas-de-sensores-con-xbee/   •\tZIGBEE. (2012) TECNOLOGÍA ZIGBEE. Recuperado de http://dspace.epn.edu.ec/bitstream/15000/8637/2/T10110CAP2.pdf  •\tDIGI. (2012). MANUAL BÁSICO DE USO DEL SOFTWARE X-CTU. Recuperado de http://www.digi.com/support/productdetail?pid=3352.  •\tARDUINO (2012). ARDUINO UNO R3. Recuperado de http://arduino.cc/en/Main/ArduinoBoardUno  •\tARDUINO (2012). MANUAL BÁSICO DE PROGRAMACIÓN ARDUINO. Recuperado de http://code.google.com/p/arduino/wiki/BuildingArduino</string>
    <string name="integrantes">Integrantes</string>
    <string name="agradecimientosfull">Siempre recordaremos, el día que ingresamos a esta Institución de Educación Superior Académica – Militar con Acreditación de Alta Calidad, el cual nos forjo como Marinos de Honor y Disciplina. En este proyecto queremos agradecerle primero que todo a nuestro padre celestial DIOS, por la sabiduría y entendimiento para la pro actividad de cada actividad desde el inicio de nuestra carrera militar. Que conllevo a un excelente resultado, a nuestros padres por su apoyo incondicional, por lo que fue una voz de aliento que incentivo motivación para culminar este logro. Muestro mis más sinceros agradecimientos a mis tutores de especialidad, a  nuestros asesores profesionales quienes nos orientaron y fomentaron su conocimiento avanzado, siendo una pieza clave imprescindible para cada etapa de aprendizaje del desarrollo de trabajo.  A mis compañeros, quienes a través de tiempo fuimos fortaleciendo una amistad y creando una familia, por compartir experiencias, alegrías, frustraciones, llantos, tristezas, peleas, celebraciones y múltiples factores que ayudaron a que hoy seamos como una familia. Sé que estas palabras no son suficientes para expresar mi agradecimiento, pero espero que con ellas, se den a entender mis sentimientos de aprecio y cariño a todos ellos.</string>
    <string-array name="opciones">
        <item>@string/integrantes</item>
        <item>@string/agradecimientos</item>
        <item>@string/introduccion</item>
        <item>@string/planteamiento</item>
        <item>@string/justificacion</item>
        <item>@string/datostiemporeal</item>
    </string-array>
</resources>
