<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Variables">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTituloVariables"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:text="@string/titulovariables"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVariable1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/variableuno"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cajaVariable1"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:selectAllOnFocus="false" />

            <TextView
                android:id="@+id/txtVariable2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/variable2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cajaVariable2"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/txtVariable3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/variable3"
                android:textAlignment="center"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cajaVariable3"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnRefrescar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/refrescar" />

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/guardar" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>